<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="unlimited">不限</string>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="user_register">用户注册</string>
    <string name="mobile_number">手机号码</string>
    <string name="mobile">手机</string>
    <string name="code">验证码</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="pass_word">密码</string>
    <string name="new_pass_word">输入您的新密码</string>
    <string name="new_pass_word2">再次输入您的新密码</string>
    <string name="car_number">车牌号</string>
    <string name="error_invalid_email">此电子邮件地址无效</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_required">此字段必填</string>
    <string name="error_invalid_password">"必须包含大小写字母和数字,长度在8-10之间"</string>
    <string name="click_refresh">点击重新刷新</string>

    <!-- contact -->
    <string name="contact_management">我的关联</string>
    <string name="contact_pass">已关联</string>
    <string name="contact_wait">待验证</string>
    <string name="contact_reject">已拒绝</string>
    <string name="company_search">企业搜索</string>
    <string name="company_name">企业名称</string>
    <string name="contact_cancel_company">取消关联此企业</string>
    <string name="contact_delete_company">删除此企业</string>

    <!-- contact search -->
    <string name="contact_company">关联此企业</string>
    <string name="contact_lock">查看详情</string>
    <string name="contact_lock_refuse">查看拒绝理由</string>

    <!-- 消息 -->
    <string name="message_select_all">全选</string>
    <string name="message_select_cancel_all">取消全选</string>

    <!-- order -->
    <string name="order_management">订单管理</string>
    <string name="order_detail">订单详情</string>
    <string name="order_nodes">订单节点</string>
    <string name="order_wait">待确认</string>
    <string name="order_received">已确认</string>
    <string name="order_completed">已完成</string>
    <string name="order_close">已关闭</string>

    <!-- order statistics -->
    <string name="order_statistics">订单统计</string>

    <!-- 业务下单 -->
    <string name="not_imported">未导入</string>
    <string name="imported">已导入</string>

    <!-- 企业明细 -->


    <string name="permission_rationale">提供电子邮件的联系人权限</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <string name="home">首页</string>
    <string name="order">订单</string>

    <!-- image tips -->
    <string name="tips_can_contact">可以关联的</string>

    <string name="delete_message">删除消息</string>
    <string name="read_message">标记已读</string>
    <string name="unread_message">标记未读</string>
    <string name="messagecenter_title">消息管理</string>
    <string name="canyouhelpme">你需要操作？</string>
    <string name="sysmessage_title">平台公告</string>
    <string name="feedback">意见反馈</string>
    <string name="contactway">联系方式</string>
    <string name="avatar">头像</string>
    <string name="realname">姓名</string>
    <string name="idnumber">身份证</string>
    <string name="vehiclelicense">行驶证</string>
    <string name="drivinglicence">驾驶证</string>
    <string name="pleaseenter">请输入</string>
    <string name="passwordmodity">密码修改</string>
    <string name="pleaseenterpassword">请输入你的密码</string>
    <string name="pleaseenternewphone">请输入你的新手机号</string>
    <string name="please_enter_six_pass">请输入6–12位密码</string>
    <string name="confirm">确定</string>
    <string name="submit">提交</string>
    <string name="cancel">取消</string>
    <string name="newmobilenumber">新的手机号</string>
    <string name="old_phone">请输入您的旧手机号</string>
    <string name="old_pass_word">请输入原密码</string>
    <string name="camera">拍照</string>
    <string name="album">相册</string>
    <string name="pleaseenteridnumber">请输入身份证号码</string>
    <string name="front">前面</string>
    <string name="back">背面</string>
    <string name="goback">返回</string>
    <string name="personaldata">个人资料</string>
    <string name="camera_and_location_rationale">请求定位与相机权限</string>
    <string name="syssetting_title">系统设置</string>
    <string name="aboutus">关于货云集</string>
    <string name="messagepush">消息推送</string>
    <string name="clearcache">清除缓存</string>
    <string name="appupdate">检查更新</string>
    <string name="cameradialogtitle" />
    <string name="startuploadaudio">开始上传语音，请稍候</string>
    <string name="theclearedcachewait">正在清除缓存，请稍候</string>
    <string name="veralert">瑶光司机端V</string>
    <string name="verificationCode">验证码</string>
    <string name="guidance">引导</string>
    <string name="main">主页</string>
    <string name="start">开始</string>
    <string name="Goopoo">服务地区</string>
    <string name="car_head_data">车头资料</string>
    <string name="back_login">回到登录页</string>
    <string name="look_feedback">查看故障反馈</string>
    <string name="look_noderecord">查看动态记录</string>
    <string name="pleaseenterqrcode">请输入验证码</string>
    <string name="please_new_pass_word">请输入新密码</string>
    <string name="pleaseentersign">请输入签名</string>
    <string name="pleaseentermail">请输入邮箱</string>
    <string name="sign">签名</string>
    <string name="email">电子邮箱</string>
    <string name="submit_and_quit">提交并退出帐号</string>
    <string name="query_company">查询企业</string>
    <string name="zhaixiedongtai">装卸动态</string>
    <string name="quit_account">退出帐号</string>
    <string name="associated_validation">关联验证</string>
    <string name="i_am">我是...</string>
    <string name="please_enter_reason_related_reasons_hit">请输入申请关联理由</string>
    <string name="account_security">账户安全</string>
    <string name="message_reminder_settings">消息提醒设置</string>
    <string name="scavenging_caching">清除缓存</string>
    <string name="use_help">使用帮助</string>
    <string name="feedback_feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="change_the_phone_number">更换手机号码</string>
    <string name="modify_the_login_password">修改登录密码</string>
    <string name="modify">修改</string>
</resources>
