<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/submit_and_quit"
        android:textColor="@color/white_text"
        app:theme="@style/AppTheme.Button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarCommon"
            layout="@layout/toolbar_common" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.yaoguang.widget.edittext.PasswordEditText
                    android:id="@+id/oldPass"
                    style="@style/hintcolor.etpass"
                    android:hint="@string/old_pass_word" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.yaoguang.widget.edittext.PasswordEditText
                    android:id="@+id/newPass1"
                    style="@style/hintcolor.etpass"
                    android:hint="@string/please_new_pass_word" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>
</FrameLayout>