<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarCommon"
            layout="@layout/toolbar_common" />

        <LinearLayout
            android:id="@+id/llAccountSecurity"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlAccountSecurity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_toLeftOf="@+id/imgAccountSecurity"
                    android:layout_toStartOf="@+id/imgAccountSecurity"
                    android:text="@string/account_security"
                    android:textColor="@color/black333"
                    android:textSize="@dimen/sp16" />

                <ImageView
                    android:id="@+id/imgAccountSecurity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/ic_triangle" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line_grey" />

        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/line_grey" />

        <RelativeLayout
            android:id="@+id/rlMessageReminderSettings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/imgMessageReminderSettings"
                android:layout_toStartOf="@+id/imgMessageReminderSettings"
                android:text="@string/message_reminder_settings"
                android:textColor="@color/black333"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/imgMessageReminderSettings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_triangle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_grey" />

        <RelativeLayout
            android:id="@+id/rlScavengingCaching"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/tvCaching"
                android:layout_toStartOf="@+id/tvCaching"
                android:text="@string/scavenging_caching"
                android:textColor="@color/black333"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tvCaching"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/imgScavengingCaching"
                android:layout_toStartOf="@+id/imgScavengingCaching"
                android:textColor="@color/grey900"
                android:textSize="@dimen/sp16"
                tools:text="可释放0.89M" />

            <ImageView
                android:id="@+id/imgScavengingCaching"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_triangle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="10dp"
            android:background="@color/line_grey" />

        <RelativeLayout
            android:id="@+id/rlUseHelp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/imgUseHelp"
                android:layout_toStartOf="@+id/imgUseHelp"
                android:text="@string/use_help"
                android:textColor="@color/black333"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/imgUseHelp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_triangle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_grey" />

        <RelativeLayout
            android:id="@+id/rlFeedbackFeedback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/imgFeedbackFeedback"
                android:layout_toStartOf="@+id/imgFeedbackFeedback"
                android:text="@string/feedback_feedback"
                android:textColor="@color/black333"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/imgFeedbackFeedback"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_triangle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_grey" />

        <RelativeLayout
            android:id="@+id/rlAbout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/imgAbout"
                android:layout_toStartOf="@+id/imgAbout"
                android:text="@string/about"
                android:textColor="@color/black333"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/imgAbout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_triangle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_grey" />

        <FrameLayout
            android:id="@+id/flQuit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/quit_account"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16" />
        </FrameLayout>

    </LinearLayout>

</layout>