<?xml version="1.0" encoding="utf-8"?>
<com.yaoguang.lib.common.view.CustomInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbarCommon"
                layout="@layout/toolbar_common" />

            <LinearLayout
                android:id="@+id/llMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="visible">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.yaoguang.widget.edittext.ClearEditText
                        android:id="@+id/etMobile"
                        style="@style/hintcolor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_phone_001"
                        android:drawablePadding="8dp"
                        android:hint="请输入手机号码"
                        android:inputType="phone"
                        android:singleLine="true" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/actvCode"
                        style="@style/hintcolor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_yz"
                        android:drawablePadding="8dp"
                        android:hint="请输入验证码"
                        android:inputType="number"
                        android:singleLine="true" />

                    <include layout="@layout/view_btngetcode" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.yaoguang.widget.edittext.PasswordEditText
                        android:id="@+id/etPassWord"
                        style="@style/hintcolor.etpass"
                        android:hint="@string/new_pass_word" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.yaoguang.widget.edittext.PasswordEditText
                        android:id="@+id/etPassWord2"
                        style="@style/hintcolor.etpass"
                        android:hint="@string/new_pass_word2" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/acbSubmit"
                    style="@style/Button"
                    android:onClick="clickComplete"
                    android:text="@string/submit" />


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</com.yaoguang.lib.common.view.CustomInsetsFrameLayout>



