<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbarCommon"
            layout="@layout/toolbar_common" />

        <RelativeLayout
            android:id="@+id/rlChangeThePhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/tvCaching"
                android:layout_toStartOf="@+id/tvCaching"
                android:text="@string/change_the_phone_number"
                android:textColor="@color/black333"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tvChangeThePhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/imgChangeThePhoneNumber"
                android:layout_toStartOf="@+id/imgChangeThePhoneNumber"
                android:textColor="@color/grey900"
                android:textSize="@dimen/sp16"
                tools:text="1323232323" />

            <ImageView
                android:id="@+id/imgChangeThePhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_triangle" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_grey" />

        <RelativeLayout
            android:id="@+id/rlModifyTheLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/tvModifyTheLoginPassword"
                android:layout_toStartOf="@+id/tvModifyTheLoginPassword"
                android:text="@string/modify_the_login_password"
                android:textColor="@color/black333"
                android:textSize="@dimen/sp16" />

            <TextView
                android:id="@+id/tvModifyTheLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_toLeftOf="@+id/imgModifyTheLoginPassword"
                android:layout_toStartOf="@+id/imgModifyTheLoginPassword"
                android:text="@string/modify"
                android:textColor="@color/grey900"
                android:textSize="@dimen/sp16" />

            <ImageView
                android:id="@+id/imgModifyTheLoginPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_triangle" />

        </RelativeLayout>

    </LinearLayout>

</layout>